--- a/css/style.css
+++ b/css/style.css
@@ -17,9 +17,29 @@ section {
 }
 
 #welcome-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
   height: 100vh;
+  background-color: #000;
+  background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
+}
+
+#welcome-section  p {
+  font-size: 3rem;
+  font-weight: 200;
+  font-style: italic;
+  color: var(--main-red);
 }
 
 navbar {
   position: fixed;
+  background: #BF3944;
+  display: flex;
+  width: 100vw;
+  height: 4rem;
+  justify-content: flex-end;
+  padding: 2rem;
 }
